# instrument-panel

./: .gitignore  CMakeLists.txt  README.md  instrument-panel.sln  make-ubuntu.sh  make.sh  release.sh  run.sh
instrument-panel/: globals.cpp  globals.h  instrument-panel  instrument-panel.cpp  instrument-panel.filters  instrument-panel.vcxproj  instrument-panel.vcxproj.filters  instrument.cpp  instrument.h  knobs.cpp  knobs.h  make.sh  packages.config  run.sh  simvarDefs.cpp  simvarDefs.h  simvars.cpp  simvars.h  ~AutoRecover.instrument-panel.vcxproj
instrument-panel/instruments/: adf.cpp  adf.h  adi.cpp  adi.h  adiLearjet.cpp  adiLearjet.h  airspeedIndicator.cpp  airspeedIndicator.h  alt.cpp  alt.h  altLearjet.cpp  altLearjet.h  altimeter.cpp  altimeter.h  annunciator.cpp  annunciator.h  asi.cpp  asi.h  asiLearjet.cpp  asiLearjet.h  attitudeIndicator.cpp  attitudeIndicator.h  digitalClock.cpp  digitalClock.h  egt.cpp  egt.h  fuel.cpp  fuel.h  hi.cpp  hi.h  nav.cpp  nav.h  newInstrument.cpp  newInstrument.h  oil.cpp  oil.h  radCom.cpp  radCom.h  radNav.cpp  radNav.h  (+20 more)
instrument-panel/instruments/alternate/: altFast.cpp  altFast.h  asiFast.cpp  asiFast.h  asiSupersonic.cpp  asiSupersonic.h  gForce.cpp  gForce.h  rpmPercent.cpp  rpmPercent.h  vsiExtreme.cpp  vsiExtreme.h
instrument-panel/instruments/genericFast/: altFast.cpp  altFast.h  asiFast.cpp  asiFast.h
instrument-panel/instruments/glider/: asiGlider.cpp  asiGlider.h
instrument-panel/instruments/learjet/: adiLearjet.cpp  adiLearjet.h
instrument-panel/instruments/savageCub/: asiSavageCub.cpp  asiSavageCub.h  comSavageCub.cpp  comSavageCub.h  rpmSavageCub.cpp  rpmSavageCub.h  xpdrSavageCub.cpp  xpdrSavageCub.h
instrument-panel/instruments/spitfire/: asiSpitfire.cpp  asiSpitfire.h  boostSpitfire.cpp  boostSpitfire.h  rpmSpitfire.cpp  rpmSpitfire.h  vsiSpitfire.cpp  vsiSpitfire.h
instrument-panel/instruments/template/: newInstrument.cpp  newInstrument.h
instrument-panel/settings/: .instrument-panel.json.swp  default-settings.json  instrument-panel - Copy.json  instrument-panel.json  savage-cub.json
instrument-panel/x64/Debug/: vc142.idb
instrument-panel/x64/Debug/instrument-panel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  instrument-panel.lastbuildstate
resources/logs/: .e9471bed54efba02348ad3b43eaaa4ca2be49e5a-audit.json
